# rm_vision_virtual_reproduce

./: .gitignore  README.md
docs/: 01_project_overview.md  01_technology_report.md  02_virtual_camera_node.md  03_camera_info_and_pnp.md  03_simple_armor_detector.md.md  04_camera_info_and_pnp.md  05_simple_armor_interfaces.md  06_simple_armor_tracker.md
scripts/: build_simple.sh  check_topics.sh  run_camera.sh  run_simple_detector.sh  run_simple_tracker.sh  view_result.sh  view_simple_result.sh
src/my_vision_node/: CMakeLists.txt  package.xml
src/my_vision_node/config/: virtual_camera.yaml
src/my_vision_node/launch/: virtual_detector.launch.py
src/my_vision_node/src/: camera_info_node.cpp  result_video_saver_node.cpp  vision_node.cpp
src/simple_armor_detector/: CMakeLists.txt  package.xml
src/simple_armor_detector/config/: simple_detector.yaml
src/simple_armor_detector/include/simple_armor_detector/: armor.hpp  detector.hpp  pnp_solver.hpp  simple_detector_node.hpp
src/simple_armor_detector/launch/: simple_detector.launch.py
src/simple_armor_detector/src/: detector.cpp  pnp_solver.cpp  simple_detector_node.cpp
src/simple_armor_interfaces/: CMakeLists.txt  package.xml
src/simple_armor_interfaces/msg/: Light.msg  SimpleArmor.msg  SimpleArmors.msg  SimpleTarget.msg
src/simple_armor_tracker/: CMakeLists.txt  package.xml
src/simple_armor_tracker/config/: simple_tracker.yaml
src/simple_armor_tracker/include/simple_armor_tracker/: extended_kalman_filter.hpp  tracker.hpp  tracker_node.hpp
src/simple_armor_tracker/launch/: simple_tracker.launch.py
src/simple_armor_tracker/src/: extended_kalman_filter.cpp  simple_tracker_node.cpp  tracker.cpp  tracker_node.cpp
