<?xml version="1.0"?>
<package format="3">
  <name>my_vision_node</name>
  <version>0.0.0</version>
  <description>Virtual camera node for RoboMaster vision algorithm testing.</description>
  <maintainer email="your_email@example.com">your_name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>